tests/ui/typeck/check-args-on-fn-err.rs
fn main() {
    unknown(1, |glyf| {
        //~^ ERROR: cannot find function `unknown` in this scope
        let actual = glyf;
    });
}
